Sutter Health/src/objects/SH_Community_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom  setting used to hold common setting that were used in community site. EG: mashape key(for word correction)</description>
    <fields>
        <fullName>SH_Case_Record_Type_Id__c</fullName>
        <label>Case Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Home_Page_Slider_Interval__c</fullName>
        <defaultValue>8000</defaultValue>
        <description>homeSliderInterval in ms (4000 ms for 4 s)</description>
        <inlineHelpText>homeSliderInterval in ms (4000 ms for 4 s)</inlineHelpText>
        <label>Home Page Slider Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH_Mashape_Account_Endpoint_URL__c</fullName>
        <description>Endpoint url</description>
        <label>Mashape Account Endpoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SH_Mashape_Account_Key__c</fullName>
        <description>Mashape Account Key : Used for word suggestions and corrections</description>
        <label>Mashape Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Community Settings</label>
</CustomObject>